# Beneficios

./: .env  BusinessPlan.md  README.md  dfx.json  docs.md  package-lock.json  package.json
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/benefits_manager/: benefits_manager.did  benefits_manager.old.most  benefits_manager.wasm  constructor.old.did  index.js  service.did.d.ts  service.did.js
.dfx/local/canisters/establishment/: index.js
.dfx/local/canisters/identity_auth/: constructor.did  identity_auth.wasm  service.did.d.ts  service.did.js
.dfx/local/canisters/wallets/: constructor.old.did  index.js  service.did.d.ts  service.did.js  wallets.wasm
src/: .env  dfx.json
src/.dfx/local/: network-id
src/.dfx/playground/: canister_ids.json  canister_timestamps.json
src/.dfx/playground/canisters/benefits_manager/: benefits_manager.did  benefits_manager.wasm  service.did.d.ts  service.did.js
src/backend/benefits_manager/: benefits_manager.mo
src/backend/establishment/: establishment.mo
src/backend/identity_auth/: identity_auth.mo
src/backend/reporting/: Cargo.toml  reporting.did
src/backend/reporting/src/: lib.rs
src/backend/wallets/: wallets.mo
src/benefits_manager/: benefits_manager.mo
src/frontend/: README.md  package.json  vite.config.js
src/frontend/src/: App.jsx  index.css  main.jsx
src/frontend/src/components/: AuthClientContext.jsx  CreateProfileForm.jsx  EstablishmentDashboard.jsx  HRDashboard.jsx  ProfileScreen.jsx  WalletScreen.jsx  WorkerDashboard.jsx
src/wallets/: wallets.mo
(+16 files in other folders)
